// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <Contacts /> should renders correctly and testing another methods 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="contactsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="contactsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Contacts"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No contacts"
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Name",
                  "width": "28%",
                },
                Object {
                  "key": "relationship",
                  "title": "Relationship",
                  "width": "28%",
                },
                Object {
                  "key": "nextOfKin",
                  "title": "Next Of Kin",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="contacts"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Contacts /> should renders correctly and testing context and lifecycle componentWillReceiveProps 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="contactsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="contactsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Contacts"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No contacts"
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Name",
                  "width": "28%",
                },
                Object {
                  "key": "relationship",
                  "title": "Relationship",
                  "width": "28%",
                },
                Object {
                  "key": "nextOfKin",
                  "title": "Next Of Kin",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id="e2f4670c-6f7b-477f-b4f8-7a2f98b0f960"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="contacts"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <ContactsDetail
          currentPanel="contactsDetail"
          detail={
            Object {
              "author": "bob.smith@gmail.com",
              "contactInformation": "test",
              "dateCreated": 1512579806000,
              "name": 123458,
              "nextOfKin": "Yes",
              "notes": "test",
              "relationship": "Sister",
              "relationshipCode": "at0036",
              "relationshipTerminology": "local",
              "relationshipType": "Informal carer",
              "source": "ethercis",
              "sourceId": "e2f4670c-6f7b-477f-b4f8-7a2f98b0f960",
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="contactsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="contactsCreate"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Contacts /> should renders correctly with contactsDetail and testing Create Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="contactsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="contactsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Contacts"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No contacts"
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Name",
                  "width": "28%",
                },
                Object {
                  "key": "relationship",
                  "title": "Relationship",
                  "width": "28%",
                },
                Object {
                  "key": "nextOfKin",
                  "title": "Next Of Kin",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="contacts"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              isSubmit={false}
            />
          }
          currentPanel="contactsCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="contactsCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="contactsCreate"
          title="Create Contact"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Contacts /> should renders correctly with contactsDetail and testing Create Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="contactsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="contactsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Contacts"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No contacts"
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Name",
                  "width": "28%",
                },
                Object {
                  "key": "relationship",
                  "title": "Relationship",
                  "width": "28%",
                },
                Object {
                  "key": "nextOfKin",
                  "title": "Next Of Kin",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="contacts"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              isSubmit={false}
            />
          }
          currentPanel="contactsCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="contactsCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="contactsCreate"
          title="Create Contact"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Contacts /> should renders correctly with diagnosisDetail and testing Detail Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="contactsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="contactsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Contacts"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No contacts"
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Name",
                  "width": "28%",
                },
                Object {
                  "key": "relationship",
                  "title": "Relationship",
                  "width": "28%",
                },
                Object {
                  "key": "nextOfKin",
                  "title": "Next Of Kin",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id="e2f4670c-6f7b-477f-b4f8-7a2f98b0f960"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="contacts"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <ContactsDetail
          currentPanel="contactsDetail"
          detail={
            Object {
              "author": "bob.smith@gmail.com",
              "contactInformation": "test",
              "dateCreated": 1512579806000,
              "name": 123458,
              "nextOfKin": "Yes",
              "notes": "test",
              "relationship": "Sister",
              "relationshipCode": "at0036",
              "relationshipTerminology": "local",
              "relationshipType": "Informal carer",
              "source": "ethercis",
              "sourceId": "e2f4670c-6f7b-477f-b4f8-7a2f98b0f960",
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="contactsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="contactPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Contacts /> should renders correctly with diagnosisDetail and testing Detail Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section full-panel full-panel-details"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <ContactsDetail
          currentPanel="contactsDetail"
          detail={
            Object {
              "author": "bob.smith@gmail.com",
              "contactInformation": "test",
              "dateCreated": 1512579806000,
              "name": 123458,
              "nextOfKin": "Yes",
              "notes": "test",
              "relationship": "Sister",
              "relationshipCode": "at0036",
              "relationshipTerminology": "local",
              "relationshipType": "Informal carer",
              "source": "ethercis",
              "sourceId": "e2f4670c-6f7b-477f-b4f8-7a2f98b0f960",
            }
          }
          editedPanel={Object {}}
          expandedPanel="contactPanel"
          isSubmit={false}
          name="contactsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="contactPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Contacts /> should renders correctly with diagnosisDetail and testing Detail Panel 3`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    />
  </div>
</section>
`;

exports[`Component <Contacts /> should renders correctly with empty store 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="contactsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="contactsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Contacts"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No contacts"
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Name",
                  "width": "28%",
                },
                Object {
                  "key": "relationship",
                  "title": "Relationship",
                  "width": "28%",
                },
                Object {
                  "key": "nextOfKin",
                  "title": "Next Of Kin",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="contacts"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Contacts /> should renders correctly with forms error 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="contactsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="contactsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Contacts"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No contacts"
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Name",
                  "width": "28%",
                },
                Object {
                  "key": "relationship",
                  "title": "Relationship",
                  "width": "28%",
                },
                Object {
                  "key": "nextOfKin",
                  "title": "Next Of Kin",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="contacts"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;
